--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.9.3",
     "node-fetch": "^2.6.0",
+    "nodemon": "^2.0.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
