--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-spinners": "^0.8.0"
+    "react-spinners": "^0.8.0",
+    "twilio": "^3.41.1"
   },
   "scripts": {
     "start": "react-scripts start",
