--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "twilio": "^3.41.1"
   },
   "scripts": {
-    "start": "server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
