--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "twilio": "^3.41.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "engines": {
+    "node": "12.10.0"
   },
   "eslintConfig": {
     "extends": "react-app"
