--- a/package.json
+++ b/package.json
@@ -23,14 +23,10 @@
     "twilio": "^3.41.1"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
-  },
-  "engines": {
-    "node": "12.10.0"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
